[project]
name = "streamlit-litellm-demo"
version = "0.1.0"
description = "This project demonstrates the integration of LiteLLM with Streamlit to create a lightweight and efficient application for AI-powered tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.74.2",
    "streamlit>=1.46.1",
]

[tool.license]
name = "MIT"
file = "LICENSE"

[tool.uv]
sync = true
